Refactor/ Sonarqube suggestions